<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    style="@style/Widget.Material3.CardView.Elevated"
    app:cardBackgroundColor="@color/principal_card_background"
    tools:layout_height="wrap_content"
    tools:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/card_text"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22º" />

        <ImageView
            android:id="@+id/currentImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/Icon_weather_descriptor"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tempFeelsLike"
            app:layout_constraintTop_toBottomOf="@+id/currentTemp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/thermal_sensation"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/card_text"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentTemp" />

        <TextView
            android:id="@+id/tempFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/card_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:text="22º" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/humidity"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/card_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/humidityPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/card_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:text="22%" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/wind"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/card_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/windVelocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="@color/card_text"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6"
            tools:text="2 m/s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>