<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ThemeOverlay.Material3.NavigationView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_circle" />


        <TextView
            android:id="@+id/weatherprjoctLabel"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="WeatherProject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_label"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weatherprjoctLabel" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/view"
            style="@style/Widget.Material3.MaterialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toTopOf="@+id/languageDropdownMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/languageDropdownMenu"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/language"
            app:layout_constraintBottom_toTopOf="@+id/metricDropdownMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <AutoCompleteTextView
                android:id="@+id/languageDropdownMenuText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/metricDropdownMenu"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/measurement_unit"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/languageDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/metricDropdownMenuText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/more_locations"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metricDropdownMenu" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/view3"
            style="@style/Widget.Material3.MaterialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toTopOf="@+id/firstSaveLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/firstSaveLocation"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:text="@string/touch_to_save_location"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintBottom_toTopOf="@+id/secondSaveLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <Button
            android:id="@+id/secondSaveLocation"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="8dp"
            android:text="@string/touch_to_save_location"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintBottom_toTopOf="@+id/thirdSaveLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstSaveLocation" />

        <Button
            android:id="@+id/thirdSaveLocation"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:text="@string/touch_to_save_location"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondSaveLocation">

        </Button>

        <Button
            android:id="@+id/cancel1"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:visibility="gone"
            app:icon="@drawable/close_icon"
            app:iconGravity="textStart"
            app:iconSize="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/firstSaveLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/firstSaveLocation"
            app:layout_constraintTop_toTopOf="@+id/firstSaveLocation"
            tools:visibility="visible" />

        <Button
            android:id="@+id/cancel2"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:visibility="gone"
            app:icon="@drawable/close_icon"
            app:iconGravity="textStart"
            app:iconSize="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/secondSaveLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/secondSaveLocation"
            app:layout_constraintTop_toTopOf="@+id/secondSaveLocation"
            tools:visibility="visible" />

        <Button
            android:id="@+id/cancel3"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:scaleType="center"
            android:visibility="gone"
            app:icon="@drawable/close_icon"
            app:iconGravity="textStart"
            app:iconSize="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/thirdSaveLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thirdSaveLocation"
            app:layout_constraintTop_toTopOf="@+id/thirdSaveLocation"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.navigation.NavigationView>